[gd_scene load_steps=14 format=3 uid="uid://cxdxdro3tve62"]

[ext_resource type="Script" uid="uid://bxcwi7u3ohax3" path="res://scripts/enemy.gd" id="1_7p1mj"]
[ext_resource type="Texture2D" uid="uid://nqy0qviiaigq" path="res://assets/sprites/slime_green.png" id="2_md0e3"]
[ext_resource type="AudioStream" uid="uid://lj6vsb0jf4gt" path="res://assets/sounds/explosion.wav" id="3_4ra3w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4ra3w"]
atlas = ExtResource("2_md0e3")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uy6h"]
atlas = ExtResource("2_md0e3")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4w8v"]
atlas = ExtResource("2_md0e3")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwavj"]
atlas = ExtResource("2_md0e3")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nenq2"]
atlas = ExtResource("2_md0e3")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_md484"]
atlas = ExtResource("2_md0e3")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_ipns3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ra3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uy6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4w8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwavj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nenq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md484")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5uy6h"]
size = Vector2(18, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ra3w"]
size = Vector2(18, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_md0e3"]
size = Vector2(12, 10)

[node name="enemy" type="StaticBody2D"]
script = ExtResource("1_7p1mj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ipns3")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.961539

[node name="Hurtbox" type="Area2D" parent="."]
z_index = 1
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_5uy6h")

[node name="StompArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompArea"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_4ra3w")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_md0e3")

[node name="KillSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_4ra3w")

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="StompArea" to="." method="_on_stomp_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
